1999-03-10  Tomislav Vujec  <tvujec@carnet.hr>

	* aclocal-include.m4 (AM_ACLOCAL_INCLUDE): Add ACLOCAL_FLAGS in
	ACLOCAL. This allows maintainer rules to work if any of the macros
	change.

1999-03-10  Tomislav Vujec  <tvujec@carnet.hr>

	* gnome.m4 (GNOME_INIT_HOOK): Wrapped position parameter in
	testing for additional inits. It gets expanded while generating
	configure, resulting in an empty parameter list - syntax error in
	for statement.

1999-03-09  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome.m4 (GNOME_INIT): Add a new paramater, which is passed to
	GNOME_INIT_HOOK. 
	(GNOME_INIT_HOOK): New parameter "additional inits".  This is a
	list like "applets capplet", and the corresponding
	GNOME_APPLETS_LIBS and GNOME_CAPPLETS_LIBS are defined.

1998-03-01  Mark Crichton <crichton@gimp.org>

	* gnome-objc-checks : Added HAVE_GNOME_OBJC conditional

1998-02-27  Gregory McLean <gregm@comstar.net>

	* gnome-x-checks.m4 : Require at least gtk+ 1.2 (pointless getting
	bug reports with an old glib/gtk/gdk set..)

1999-02-25  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-checks.m4: Require LibGTop >= 1.0.0.

1999-02-22  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* compiler-flags.m4: Only add the compilation warnings if the
	compiler is GCC.

1999-02-20  Timur Bakeyev <mc@bat.ru>

	* gnome.m4: Added and exported ZVT_LIBS.

Tue Feb 16 19:35:42 1999  Owen Taylor  <otaylor@redhat.com>

	* gnome-x-checks.m4: Require GTK+-1.1.16.

1999-02-15  Timur Bakeyev <mc@bat.ru>

	* gnome-gettext.m4: Work around a bug in BSDI's native sh, which in-
	correctly expands ${LINGUAS=$ALL_LINGUAS}. Switched to if/fi variant.

1999-02-15  Chris Lahey  <clahey@umich.edu>

	* gnome-print-check.m4: Copied this from libhnj/libhnj.m4.  Almost
	completely replaced the old version.  The only usage difference is
	that it defines GNOME_PRINT_LIBS instead of GNOME_PRINT_LIB and
	defines GNOME_PRINT_CFLAGS as well.

1999-02-10  Martin Baulig  <martin@home-of-linux.org>
